--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <html>
   <head>
     <title>ゲストハウスお掃除代行サービス CLOVER</title>
-
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <meta name="description" content="京都でゲストハウス清掃サービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。" />
+    <meta name="keywords" content="京都,ゲストハウス,清掃,リネンサプライ,クリーニング,民泊" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -39,8 +42,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<div class="inner">
           <h3>京都ゲストハウス清掃サービス</h3>
 	  <h1>CLOVER</h1>
-	  <p>豊富な清掃ノウハウで信頼できるサービスを低価格で提供いたします。
+	  <p>豊富な清掃ノウハウで信頼できるサービスを提供いたします。
 							  </br> また、ゲストハウスを運営されている方の細かいご要望にもお答えいたします。
+							  </br> 高品質なリネンサプライ（シーツ・タオル・枕カバー）も可能なのでご相談ください。
           </p>
 	  <ul class="actions">
 	    <li><a href="#one" class="button scrolly">サービス内容</a></li>
@@ -142,7 +146,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <footer id="footer" class="wrapper style1-alt">
       <div class="inner">
 	<ul class="menu">
-	  <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+	  <li>&copy; Clover Kyoto. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 	</ul>
       </div>
     </footer>
