Improve meta tag

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 -->
 <html>
   <head>
-    <title>ゲストハウスお掃除代行サービス CLOVER</title>
+    <title>京都|ゲストハウスお掃除代行サービス CLOVER</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="description" content="京都でゲストハウス清掃サービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。" />
-    <meta name="keywords" content="京都,ゲストハウス,清掃,リネンサプライ,クリーニング,民泊" />
+    <meta name="keywords" content="京都,ゲストハウス,清掃,リネンサプライ,クリーニング,民泊,掃除代行" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
