--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <html>
   <head>
     <title>京都|ゲストハウスお掃除代行サービス CLOVER</title>
+    <link href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="description" content="京都でゲストハウス清掃サービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。" />
