福岡店追加

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 -->
 <html>
   <head>
-    <title>京都|ゲストハウスお掃除代行サービス CLOVER</title>
+    <title>京都・福岡|ゲストハウスお掃除代行サービス CLOVER</title>
     <link href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <meta name="description" content="京都でゲストハウス清掃サービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。" />
-    <meta name="keywords" content="京都,ゲストハウス,清掃,リネンサプライ,クリーニング,民泊,掃除代行" />
+    <meta name="description" content="京都と福岡でゲストハウス清掃サービスを提供しています。豊富なノウハウで細かいご要望にもお答えいたします。" />
+    <meta name="keywords" content="京都,福岡,博多,ゲストハウス,清掃,リネンサプライ,クリーニング,民泊,掃除代行" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -41,7 +41,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <!-- Intro -->
       <section id="intro" class="wrapper style1 fullscreen fade-up">
 	<div class="inner">
-          <h3>京都ゲストハウス清掃サービス</h3>
+          <h3>京都・福岡ゲストハウス清掃サービス</h3>
 	  <h1>CLOVER</h1>
 	  <p>豊富な清掃ノウハウで信頼できるサービスを提供いたします。
 							  </br> また、ゲストハウスを運営されている方の細かいご要望にもお答えいたします。
@@ -104,17 +104,34 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<div class="inner">
 	  <h2>お問い合せ</h2>
 	  <div class="split style1">
-	    <section>
+	    <section id="kyoto-branch">
 	      <ul class="contact">
 		<li>
-		  <h3>住所</h3>
-		  <span>京都市山科区北花山六反町26-55<br />
+		  <h3>京都店住所</h3>
+		  <span>〒607-8473 京都市山科区北花山六反町26-55<br />
 		    テラスサンヒル203
 		  </span>
 		</li>
 		<li>
-		  <h3>電話</h3>
+		  <h4>電話</h4>
 		  <span>090-7967-3469(カシダ)</br>お電話の際は、清掃依頼の件でとお伝え下さい。</span>
+		</li>
+	      </ul>
+	    </section>
+	    <section id="fukuoka-branch">
+	      <ul class="contact">
+		<li>
+		  <h3>福岡店住所</h3>
+		  <span>〒812-0016 福岡県福岡市博多区博多駅南2丁目14-16
+		  </span>
+		</li>
+		<li>
+		  <h4>電話</h4>
+		  <span>080 4238 7269(モリタ)</br>お電話の際は、清掃依頼の件でとお伝え下さい。</span>
+		</li>
+		<li>
+		  <h4>メール</h4>
+		  <span><a href="mailto:1019yugo@gmall.com">1019yugo@gmall.com</a></span>
 		</li>
 	      </ul>
 	    </section>
